general-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: general-deployment
spec:
  selector:
    matchLabels:
      app: general
  replicas: 2
  template:
    metadata:
      labels:
        app: general
    spec:
      containers:
      - name: general
        image: namanshenoy/kube-test:v2
        imagePullPolicy: "Always"
        ports: 
        - containerPort: 3000
