hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 2 
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: namanshenoy/kube-test:v2
        imagePullPolicy: "Always"
        ports: 
        - containerPort: 3000
