general-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: general-service
  labels:
    app: general 
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: http
  selector:
    app: general
