hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: http
  selector:
    app: hello
