hello.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 2 
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: namanshenoy/kube-test:v2
        imagePullPolicy: "Always"
        ports: 
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: http
  selector:
    app: hello
